--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Axel</title>
     <style media="screen">
       body { background-color: #021136; color: white; }
     </style>
