--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Axel</title>
     <style media="screen">
-      body { background-color: #021136; color: white; }
+      body { background-color: #021136; color: white; font-family: Hiragino Sans;}
     </style>
   </head>
   <body>
