--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -4,7 +4,15 @@
     <meta charset="utf-8">
     <title>Axel</title>
     <style media="screen">
-      body { background-color: #021136; color: white; font-family: Hiragino Sans;}
+      @font-face {
+        font-family: "PT Root UI Light";
+        src: url("/public/pt-root-ui-light.woff");
+      }
+      body {
+        background-color: #021136;
+        color: white;
+        font-family: PT Root UI Light;
+      }
     </style>
   </head>
   <body>
