--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <h3>This website is powered by</h3>
-    <h1>Axel</h1>
+    <p style="font-size: 14px;">This website is powered by</p>
+    <p style="font-size: 20px;">Axel</p>
   </body>
 </html>
