--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -13,10 +13,14 @@
         color: white;
         font-family: PT Root UI Light;
       }
+      p {
+        margin: 0;
+        padding: 0;
+      }
     </style>
   </head>
   <body>
-    <p style="font-size: 14px;">This website is powered by</p>
-    <p style="font-size: 20px;">Axel</p>
+    <p style="font-size: 20px;">This website is powered by</p>
+    <p style="font-size: 30px;">Axel</p>
   </body>
 </html>
