--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -17,10 +17,17 @@
         margin: 0;
         padding: 0;
       }
+      .center {
+        margin: auto;
+        width: 50%;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
-    <p style="font-size: 20px;">This website is powered by</p>
-    <p style="font-size: 30px;">Axel</p>
+    <div class="center">
+      <p style="font-size: 20px;">This website is powered by</p>
+      <p style="font-size: 30px;">Axel</p>
+    </div>
   </body>
 </html>
