--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -18,9 +18,8 @@
         padding: 0;
       }
       .center {
-        margin: auto;
-        width: 50%;
         text-align: center;
+        margin-top: 28%; /* half of the height */
       }
     </style>
   </head>
