--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Axel</title>
+    <link rel="icon" href="/public/Axel.svg">
     <style media="screen">
       @font-face {
         font-family: "PT Root UI Light";
