--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Axel Login</title>
-    <link rel="icon" href="/public/Axel.svg">
-    <link rel="stylesheet" type="text/css" href="/public/styles.css"/>
-  </head>
-  <body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Axel Login</title>
+  <link rel="icon" href="/public/Axel.svg">
+  <link rel="stylesheet" type="text/css" href="/public/styles.css" />
+</head>
+
+<body>
+  <div class="cards">
     <div class="card">
-      <form action="/login" method="post">
-        <span>Username</span>
-        <input type="text" name="Username" value="" placeholder="Username">
-        <span>Password</span>
-        <input type="password" name="Password" value="Password">
-      </form>
+      <div class="content">
+        <form action="/login" method="post">
+          <span>Username</span>
+          <input type="text" name="Username" value="" placeholder="Username">
+          <span>Password</span>
+          <input type="password" name="Password" value="Password">
+        </form>
+      </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
