--- a/dashboard/public/styles.css
+++ b/dashboard/public/styles.css
@@ -7,3 +7,34 @@ body {
   color: white;
   font-family: PT Root UI Light;
 }
+.cards {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  flex-wrap: wrap;
+  margin-top: 40px;
+  margin-bottom: 60px;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  text-align: center;
+  background-color: #24BC8A;
+  border-radius: 5px;
+  max-width: 300px;
+  min-width: 300px;
+  width: 300px;
+  margin-left: 5px;
+  margin-bottom: 5px;
+}
+
+.content {
+  padding: 15px;
+}
+
+.card img {
+  float: left;
+  height: 100px;
+  border-radius: 5px;
+}
