--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -13,9 +13,9 @@
     <div class="card">
       <div class="content">
         <form action="/login" method="post">
-          <span>Username</span>
+          <p>Username</p>
           <input type="text" name="Username" value="" placeholder="Username">
-          <span>Password</span>
+          <p>Password</p>
           <input type="password" name="Password" value="Password">
         </form>
       </div>
