--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -17,6 +17,7 @@
           <input type="text" name="Username" value="" placeholder="Username">
           <p>Password</p>
           <input type="password" name="Password" value="Password">
+          <button type="submit">Save</button>
         </form>
       </div>
     </div>
