--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -13,10 +13,12 @@
     <div class="card">
       <div class="content">
         <form action="/login" method="post">
+          <p style="font-size: 30px;"></p>
           <p>Username</p>
           <input type="text" name="Username" value="" placeholder="Username">
           <p>Password</p>
           <input type="password" name="Password" value="Password">
+          <br>
           <button type="submit">Save</button>
         </form>
       </div>
