--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -19,7 +19,7 @@
           <p>Password</p>
           <input type="password" name="Password" value="Password">
           <br>
-          <button type="submit">Save</button>
+          <button type="submit">Login</button>
         </form>
       </div>
     </div>
