--- a/dashboard/public/styles.css
+++ b/dashboard/public/styles.css
@@ -42,3 +42,29 @@ p {
   height: 100px;
   border-radius: 5px;
 }
+
+input {
+  background-color: white;
+  border-style: solid;
+  border-color: #24BC8A;
+  color: black;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 20px;
+  height: 30px;
+  width: 200px;
+  font-size: 15px;
+}
+
+.button {
+  background-color: #24BC8A;
+  line-height: 40px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 20px;
+  text-decoration: none;
+  color: white;
+}
