--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -17,7 +17,7 @@
           <p>Username</p>
           <input type="text" name="Username" value="" placeholder="Username">
           <p>Password</p>
-          <input type="password" name="Password" value="Password">
+          <input type="password" name="Password" value="" placeholder="Password">
           <br>
           <button type="submit">Login</button>
         </form>
