--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -13,10 +13,10 @@
     <div class="card">
       <div class="content">
         <form action="/login" method="post">
-          <p style="font-size: 30px;"></p>
-          <p>Username</p>
+          <p style="font-size: 30px;">Axel Login</p>
+          <p style="font-size: 15px;">Username</p>
           <input type="text" name="Username" value="" placeholder="Username">
-          <p>Password</p>
+          <p style="font-size: 15px;">Password</p>
           <input type="password" name="Password" value="" placeholder="Password">
           <br>
           <button type="submit">Login</button>
