--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="cards">
+  <div style="margin-top: 90px;" class="cards">
     <div class="card">
       <div class="content">
         <form action="/login" method="post">
