--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Axel</title>
     <link rel="icon" href="/public/Axel.svg">
+    <link rel="apple-touch-icon" href="/public/Axel.svg">
     <style media="screen">
       @font-face {
         font-family: "PT Root UI Light";
