--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Axel</title>
-    <link rel="icon" href="/public/Axel.svg">
-    <link rel="apple-touch-icon" href="/public/Axel.svg">
+    <link rel="icon" href="/public/Axel.png">
+    <link rel="apple-touch-icon" href="/public/Axel.png">
     <style media="screen">
       @font-face {
         font-family: "PT Root UI Light";
