--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Axel</title>
-    <link rel="icon" href="/public/Axel.png">
+    <link rel="icon" type="image/png" href="/public/Axel.png">
     <link rel="apple-touch-icon" href="/public/Axel.png">
     <style media="screen">
       @font-face {
