--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Axel</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="icon" href="/public/Axel.png">
     <link rel="apple-touch-icon" href="/public/Axel.png">
     <style media="screen">
