--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -5,6 +5,7 @@
     <title>Axel</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="icon" href="/public/Axel.png">
+    <meta name="apple-mobile-web-app-title" content="Axel">
     <link rel="apple-touch-icon" href="/public/Axel.png">
     <style media="screen">
       @font-face {
