--- a/dashboard/public/styles.css
+++ b/dashboard/public/styles.css
@@ -24,7 +24,7 @@ p {
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   text-align: center;
-  background-color: #24BC8A;
+  background-color: #031950;
   border-radius: 5px;
   max-width: 300px;
   min-width: 300px;
