--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Axel Login</title>
-  <link rel="icon" href="/public/Axel.svg">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="icon" href="/public/Axel.png">
+  <meta name="apple-mobile-web-app-title" content="Axel">
+  <link rel="apple-touch-icon" href="/public/Axel.png">
   <link rel="stylesheet" type="text/css" href="/public/styles.css" />
 </head>
 
