--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Axel</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="shortcut icon" href="/public/Axel.png">
+    <link rel="icon" href="/public/Axel.png">
     <meta name="apple-mobile-web-app-title" content="Axel">
     <link rel="apple-touch-icon" href="/public/Axel.png">
     <style media="screen">
