--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -16,7 +16,8 @@
     <div class="card">
       <div class="content">
         <form action="/login" method="post">
-          <p style="font-size: 30px;">Axel Login</p>
+          <img src="/public/Axel.svg" height="200px" alt="Axel">
+          <p style="font-size: 30px;">Axel</p>
           <br>
           <p style="font-size: 18px;">Username</p>
           <input type="text" name="Username" value="" placeholder="Username">
