--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -16,8 +16,12 @@
     <div class="card">
       <div class="content">
         <form action="/login" method="post">
-          <img src="/public/Axel.svg" height="200px" alt="Axel">
-          <p style="font-size: 30px;">Axel</p>
+          <div class="logo">
+            <a href="#">
+              <img src="/public/Axel.svg" alt="Axel">
+              <p>Axel</p>
+            </a>
+          </div>
           <br>
           <p style="font-size: 18px;">Username</p>
           <input type="text" name="Username" value="" placeholder="Username">
