--- a/dashboard/public/styles.css
+++ b/dashboard/public/styles.css
@@ -70,7 +70,7 @@ button {
 }
 
 .logo {
-  vertical-align: middle;
+  vertical-align: middlxe;
   display: inline-block;
   width: 100%;
   height: 50px;
@@ -83,6 +83,6 @@ button {
   display: inline-block;
 }
 
-.logo p {
+.logo span {
   font-size: 20px;
 }
