--- a/dashboard/public/styles.css
+++ b/dashboard/public/styles.css
@@ -30,6 +30,7 @@ p {
   min-width: 300px;
   width: 300px;
   margin-left: 5px;
+  margin-right: 5px;
   margin-bottom: 5px;
 }
 
@@ -70,19 +71,18 @@ button {
 }
 
 .logo {
-  vertical-align: middlxe;
-  display: inline-block;
-  width: 100%;
-  height: 50px;
-  text-decoration: none;
+  overflow: auto;
+  margin-left: 60px;
 }
 
 .logo img {
-  height: 50px;
-  vertical-align: middle;
-  display: inline-block;
+  float: left;
+  height: 60px;
 }
 
 .logo span {
-  font-size: 20px;
+ float: left;
+   margin-top: 15px;
+  font-size: 30px;
+
 }
