--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -18,7 +18,7 @@
         <form action="/login" method="post">
           <div class="logo">
             <img src="/public/Axel.svg" alt="Axel">
-            <p>Axel</p>
+            <span>Axel</span>
           </div>
           <br>
           <p style="font-size: 18px;">Username</p>
