--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -9,6 +9,7 @@
   <meta name="apple-mobile-web-app-title" content="Axel">
   <link rel="apple-touch-icon" href="/public/Axel.png">
   <link rel="stylesheet" type="text/css" href="/public/styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
