--- a/dashboard/ejs/index.ejs
+++ b/dashboard/ejs/index.ejs
@@ -7,6 +7,7 @@
     <link rel="icon" href="/public/Axel.png">
     <meta name="apple-mobile-web-app-title" content="Axel">
     <link rel="apple-touch-icon" href="/public/Axel.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style media="screen">
       @font-face {
         font-family: "PT Root UI Light";
