--- a/dashboard/ejs/blocks/header.ejs
+++ b/dashboard/ejs/blocks/header.ejs
@@ -2,7 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Axel Web Dashboard</title>
+    <title>Axel - Dashboard</title>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" href="/public/Axel.png">
+    <meta name="apple-mobile-web-app-title" content="Axel">
+    <link rel="apple-touch-icon" href="/public/Axel.png">
+    <link rel="stylesheet" type="text/css" href="/public/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    
+    <nav>
+      <div class="logo">
+        <img src="/public/Axel.svg" alt="Axel">
+        <span>Axel</span>
+      </div>
+    </nav>
