--- a/dashboard/public/styles.css
+++ b/dashboard/public/styles.css
@@ -84,5 +84,10 @@ button {
  float: left;
    margin-top: 10px;
   font-size: 30px;
+}
 
+nav {
+  width: 100%;
+  height: 135px;
+  background-color: #031950;
 }
