--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -17,7 +17,7 @@
     <div class="card">
       <div class="content">
         <form action="/login" method="post">
-          <div class="logo">
+          <div style="margin-left: 60px;" class="logo">
             <img src="/public/Axel.svg" alt="Axel">
             <span>Axel</span>
           </div>
