--- a/dashboard/ejs/blocks/header.ejs
+++ b/dashboard/ejs/blocks/header.ejs
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav>
-      <div class="logo">
+      <div style="margin-top 10px; margin-bottom: 10px;" class="logo">
         <img src="/public/Axel.svg" alt="Axel">
         <span>Axel</span>
       </div>
