--- a/dashboard/ejs/blocks/header.ejs
+++ b/dashboard/ejs/blocks/header.ejs
@@ -16,4 +16,8 @@
         <img src="/public/Axel.svg" alt="Axel">
         <span>Axel</span>
       </div>
+      <div class="user">
+        <p>ElectricReality</p>
+        
+      </div>
     </nav>
