--- a/dashboard/public/styles.css
+++ b/dashboard/public/styles.css
@@ -96,6 +96,7 @@ nav {
   width: 100%;
   background-color: #031950;
   overflow: hidden;
+  border-bottom: solid 2px white;
 }
 
 nav .user {
@@ -107,5 +108,14 @@ nav .user {
 
 .subnav {
   width: 100%;
-  background-color:
+  background-color: linear-gradient(#031950, #021136);
+}
+
+.subnav li {
+  display: inline;
+}
+
+.subnav a {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
