--- a/dashboard/ejs/blocks/header.ejs
+++ b/dashboard/ejs/blocks/header.ejs
@@ -18,6 +18,12 @@
       </div>
       <div class="user">
         <p>ElectricReality</p>
-        
       </div>
     </nav>
+    <div class="subnav">
+      <ul>
+        <li><a href="/dashboard">Overview</a></li>
+        <li><a href="/applications"></a>Applications</li>
+        <li><a href="/settings"></a>System Settings</li>
+      </ul>
+    </div>
