--- a/dashboard/ejs/blocks/header.ejs
+++ b/dashboard/ejs/blocks/header.ejs
@@ -23,7 +23,7 @@
     <div class="subnav">
       <ul>
         <li><a href="/dashboard">Overview</a></li>
-        <li><a href="/applications"></a>Applications</li>
-        <li><a href="/settings"></a>System Settings</li>
+        <li><a href="/applications">Applications</a></li>
+        <li><a href="/settings">System Settings</a></li>
       </ul>
     </div>
