--- a/dashboard/public/styles.css
+++ b/dashboard/public/styles.css
@@ -108,7 +108,7 @@ nav .user {
 
 .subnav {
   width: 100%;
-  background-color: linear-gradient(to right, #031950, #021136);
+  background: linear-gradient(90deg, rgba(3,25,80,1) 0%, rgba(2,17,54,1) 100%);
 }
 
 .subnav li {
