--- a/dashboard/ejs/blocks/header.ejs
+++ b/dashboard/ejs/blocks/header.ejs
@@ -24,6 +24,6 @@
       <ul>
         <li><a href="/dashboard">Overview</a></li>
         <li><a href="/applications">Applications</a></li>
-        <li><a href="/settings">System Settings</a></li>
+        <li><a href="/settings">Settings</a></li>
       </ul>
     </div>
