--- a/dashboard/public/styles.css
+++ b/dashboard/public/styles.css
@@ -118,4 +118,15 @@ nav .user {
 .subnav a {
   text-decoration: none;
   color: white;
+  padding-right: 15px;
+}
+
+.subnav ul {
+  padding: 0;
+  margin-top: 0;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
 }
