--- a/dashboard/ejs/blocks/header.ejs
+++ b/dashboard/ejs/blocks/header.ejs
@@ -22,7 +22,7 @@
     </nav>
     <div class="subnav">
       <ul>
-        <li><a href="/dashboard">Overview</a></li>
+        <li><a href="/dashboard" class="sub-enabled">Overview</a></li>
         <li><a href="/applications">Applications</a></li>
         <li><a href="/settings">Settings</a></li>
       </ul>
