--- a/dashboard/ejs/dashboard.ejs
+++ b/dashboard/ejs/dashboard.ejs
@@ -1,3 +1,3 @@
 <% include ./blocks/header %>
-<p style="text-align: center">Overview</p>
+<p style="text-align: center; font-size: 30px;">Overview</p>
 <% include ./blocks/footer %>
