--- a/dashboard/ejs/dashboard.ejs
+++ b/dashboard/ejs/dashboard.ejs
@@ -1,3 +1,17 @@
 <% include ./blocks/header %>
 <p style="text-align: center; font-size: 30px;">Overview</p>
+<div style="margin-top: 90px;" class="cards">
+  <div class="card">
+    <div class="content">
+      <p style="font-size: 20px;" >Cpu Usage</p>
+      <div class="chart" data-percent="73">73%</div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="content">
+      <p style="font-size: 20px;" >Ram Usage</p>
+      <div class="chart" data-percent="73">73%</div>
+    </div>
+  </div>
+</div>
 <% include ./blocks/footer %>
