--- a/dashboard/ejs/blocks/header.ejs
+++ b/dashboard/ejs/blocks/header.ejs
@@ -17,7 +17,7 @@
         <span>Axel</span>
       </div>
       <div class="user">
-        <p>ElectricReality</p>
+        <a href="/logout">Logout</a>
       </div>
     </nav>
     <div class="subnav">
