--- a/dashboard/ejs/dashboard.ejs
+++ b/dashboard/ejs/dashboard.ejs
@@ -3,16 +3,47 @@
 <div class="cards">
   <div class="card">
     <div class="content">
-      <p style="font-size: 20px;" >Cpu Usage</p>
-      <div class="chart" data-percent="73">73%</div>
+      <div id="progress-semi"></div>
     </div>
   </div>
   <div class="card">
     <div class="content">
-      <p style="font-size: 20px;" >Ram Usage</p>
-      <div class="chart" data-percent="73">73%</div>
+      <div id="progress-semi"></div>
     </div>
   </div>
 </div>
+<script type="text/javascript">
+  // progressbar.js@1.0.0 version is used
+  // Docs: http://progressbarjs.readthedocs.org/en/1.0.0/
 
+  var bar = new ProgressBar.SemiCircle(container, {
+    strokeWidth: 6,
+    color: '#fff',
+    trailColor: '#eee',
+    trailWidth: 1,
+    easing: 'easeInOut',
+    duration: 1400,
+    svgStyle: null,
+    text: {
+      value: '',
+      alignToBottom: false
+    },
+    from: {color: '#87ff53'},
+    to: {color: '#87ff53'},
+    // Set default step function for all animate calls
+    step: (state, bar) => {
+      bar.path.setAttribute('stroke', state.color);
+      var value = Math.round(bar.value() * 100);
+      if (value === 0) {
+        bar.setText('');
+      } else {
+        bar.setText(value);
+      }
+    }
+  });
+  bar.text.style.fontFamily = '"Raleway", Helvetica, sans-serif';
+  bar.text.style.fontSize = '2rem';
+
+  bar.animate(0.23);  // Number from 0.0 to 1.0
+</script>
 <% include ./blocks/footer %>
