--- a/dashboard/ejs/dashboard.ejs
+++ b/dashboard/ejs/dashboard.ejs
@@ -13,10 +13,7 @@
   </div>
 </div>
 <script type="text/javascript">
-  // progressbar.js@1.0.0 version is used
-  // Docs: http://progressbarjs.readthedocs.org/en/1.0.0/
-
-  var bar = new ProgressBar.SemiCircle(container, {
+  var bar = new ProgressBar.SemiCircle(progress-semi, {
     strokeWidth: 6,
     color: '#fff',
     trailColor: '#eee',
