--- a/dashboard/public/styles.css
+++ b/dashboard/public/styles.css
@@ -106,6 +106,13 @@ nav .user {
   font-size: 20px;
 }
 
+nav .a {
+  text-decoration: none;
+  color: white;
+  padding-right: 15px;
+
+}
+
 .subnav {
   width: 100%;
   background: linear-gradient(90deg, rgba(3,25,80,1) 0%, rgba(2,17,54,1) 100%);
