--- a/dashboard/ejs/dashboard.ejs
+++ b/dashboard/ejs/dashboard.ejs
@@ -4,13 +4,37 @@
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >Cpu Usage</p>
-      <div class="chart" data-percent="73">73%</div>
+      <p>10%</p>
     </div>
   </div>
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >Ram Usage</p>
-      <div class="chart" data-percent="73">73%</div>
+      <p>1000MB of 4000MB</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="content">
+      <p style="font-size: 20px;" >Disc Usage</p>
+      <p>10GB of 20GB</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="content">
+      <p style="font-size: 20px;" >System Uptime</p>
+      <p>10:00:10</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="content">
+      <p style="font-size: 20px;" >Applications</p>
+      <p>4</p>
+    </div>
+  </div>
+  <div class="card">
+    <div class="content">
+      <p style="font-size: 20px;" >Users</p>
+      <p>2</p>
     </div>
   </div>
 </div>
