--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -25,7 +25,7 @@
           <%
             if(message) {
           %>
-          <p><%= message %><</p>
+          <p><%= message %></p>
           <% } %>
           <p style="font-size: 18px;">Username</p>
           <input type="text" name="Username" value="" placeholder="Username">
