--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -28,9 +28,9 @@
           <p><%= message %></p>
           <% } %>
           <p style="font-size: 18px;">Username</p>
-          <input type="text" name="Username" value="" placeholder="Username">
+          <input type="text" name="username" value="" placeholder="Username">
           <p style="font-size: 18px;">Password</p>
-          <input type="password" name="Password" value="" placeholder="Password">
+          <input type="password" name="password" value="" placeholder="Password">
           <br>
           <button type="submit">Login</button>
         </form>
