--- a/dashboard/ejs/dashboard.ejs
+++ b/dashboard/ejs/dashboard.ejs
@@ -10,19 +10,19 @@
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >Cpu Usage</p>
-      <p><%= os.cpuUsage(); %></p>
+      <p><%= os.cpuUsage( function(v) { return v }); %></p>
     </div>
   </div>
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >Ram Usage</p>
-      <p><%= os.usedMem %> of <%= os.totalMem %></p>
+      <p><%= os.totalmem() - os.freemem() %> of <%= os.totalmem %></p>
     </div>
   </div>
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >System Uptime</p>
-      <p><%= os.sysUp %></p>
+      <p><%= os.sysUptime %></p>
     </div>
   </div>
   <div class="card">
