--- a/dashboard/ejs/dashboard.ejs
+++ b/dashboard/ejs/dashboard.ejs
@@ -10,7 +10,7 @@
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >Cpu Usage</p>
-      <p><%= os.cpuUsage( function(v) { return v }); %></p>
+      <p><%= os.cpuUsage(function(v){ return v; }); %></p>
     </div>
   </div>
   <div class="card">
