--- a/dashboard/ejs/dashboard.ejs
+++ b/dashboard/ejs/dashboard.ejs
@@ -16,13 +16,13 @@
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >Ram Usage</p>
-      <p><%= os.totalmem() - os.freemem() %> of <%= os.totalmem %></p>
+      <p><%= os.totalmem() - os.freemem() %> of <%= os.totalmem() %></p>
     </div>
   </div>
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >System Uptime</p>
-      <p><%= os.sysUptime %></p>
+      <p><%= os.sysUptime() %></p>
     </div>
   </div>
   <div class="card">
