--- a/dashboard/ejs/update.ejs
+++ b/dashboard/ejs/update.ejs
@@ -39,8 +39,8 @@
   <body>
     <div class="center">
       <img src="/public/Axel.svg" height="200px" alt="Axel">
-      <p style="font-size: 20px;">This website is powered by</p>
-      <p style="font-size: 30px;">Axel</p>
+      <p style="font-size: 20px;">Axel is being updated.</p>
+      <p style="font-size: 30px;">Please wait.</p>
     </div>
   </body>
 </html>
