--- a/dashboard/ejs/dashboard.ejs
+++ b/dashboard/ejs/dashboard.ejs
@@ -4,19 +4,19 @@
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >Operating System</p>
-      <p><%= os.platform(); %></p>
+      <p>Ubuntu</p>
     </div>
   </div>
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >Ram Usage</p>
-      <p><%= os.totalmem() - os.freemem() %> of <%= os.totalmem() %></p>
+      <p>10 mb of 1000 gb</p>
     </div>
   </div>
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >System Uptime</p>
-      <p><%= os.sysUptime() %></p>
+      <p>1 min 2 sec</p>
     </div>
   </div>
   <div class="card">
