--- a/dashboard/ejs/login.ejs
+++ b/dashboard/ejs/login.ejs
@@ -19,7 +19,7 @@
         <form action="/login" method="post">
           <div style="margin-left: 60px;" class="logo">
             <img src="/public/Axel.svg" alt="Axel">
-            <span>Axel</span>
+            <span>Axel yee</span>
           </div>
           <br>
           <%
