--- a/dashboard/ejs/update.ejs
+++ b/dashboard/ejs/update.ejs
@@ -44,8 +44,8 @@
     </div>
     <script type="text/javascript">
           setInterval(function () {
-            let paragraph = document.getElementByID("paragraph").innerHTML
-            let remaining = document.getElementByID("countdown").innerHTML;
+            let paragraph = document.getElementByID("paragraph").value
+            let remaining = document.getElementByID("countdown").value;
             if(remaining < 0){
               return document.getElementById("paragraph").innerHTML = "Redirecting to login page.";
             }
