--- a/dashboard/ejs/settings.ejs
+++ b/dashboard/ejs/settings.ejs
@@ -4,7 +4,7 @@
   <div class="card">
     <div class="content">
       <p style="font-size: 20px;" >Update Axel</p>
-      <a class="button" href="/settings/update" >Update</a>
+      <a class="button" href="/settings/update" style="padding-top:10px; padding-bottom:10px;">Update</a>
     </div>
   </div>
   <div class="card">
