--- a/dashboard/ejs/update.ejs
+++ b/dashboard/ejs/update.ejs
@@ -43,17 +43,18 @@
       <p id="paragraph" style="font-size: 30px;">Please wait for <span id="countdown">20</span> seconds.</p>
     </div>
     <script type="text/javascript">
-          setInterval(function () {
-            let paragraph = document.getElementById("paragraph").value
-            let remaining = document.getElementById("countdown").value;
-            if(remaining < 0){
-              return document.getElementById("paragraph").innerHTML = "Redirecting to login page.";
-            }
-            document.getElementById("countdown").innerHTML = remaining - 1;
-          }, 1000);
-          setTimeout(function () {
-            window.location = "/login";
-          }, 20000);
+    let timeLeft = 20;
+    let elem = document.getElementById('countdown');
+    let timerId = setInterval(countdown, 1000);
+    function countdown() {
+      if (timeLeft == 0) {
+        clearTimeout(timerId);
+        window.location = "/login";
+      } else {
+        elem.innerHTML = timeLeft;
+        timeLeft--;
+      }
+    }
     </script>
   </body>
 </html>
