--- a/dashboard/ejs/applications.ejs
+++ b/dashboard/ejs/applications.ejs
@@ -13,10 +13,28 @@
 </div>
 
 <div class="cards">
+  <%
+    services.forEach(function(s){
+    %>
+    <div class="card">
+      <div class="content">
+        <h3><%= s.Spec.name %></h3>
+        <hr>
+        <p style="font-size: 20px;" >Stats!</p>
+        <ul class="align-center">
+          <li>Image: <%= s.Spec.TaskTemplate.ContainerSpec.Image %></li>
+        </ul>
+      </div>
+    </div>
+    <% }) %>
   <div class="card">
     <div class="content">
-      <p style="font-size: 20px;" >Operating System</p>
-      <p><%= os.platform(); %></p>
+      <form action="/applications" method="post">
+        <p style="font-size: 20px;" >Create App!</p>
+        <input type="text" name="name" value="" placeholder="name">
+        <br>
+        <button type="submit">Create!</button>
+      </form>
     </div>
   </div>
 </div>
