--- a/dashboard/ejs/applications.ejs
+++ b/dashboard/ejs/applications.ejs
@@ -18,7 +18,7 @@
     %>
   <div class="card">
     <div class="content">
-      <h3><%= s.Spec.name %></h3>
+      <h3><%= s.Spec.Name %></h3>
       <hr>
       <p style="font-size: 20px;">Stats!</p>
       <ul class="align-center">
