--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -1,5 +1,5 @@
 <% include ./blocks/header %>
-<p style="text-align: center; font-size: 30px;">Manage <%= dockerstats.Spec.Name %></p>
+<p style="text-align: center; font-size: 30px;">Manage <%= dockerapp.Spec.Name %></p>
 <div class="cards">
   <div class="card">
     <div class="content">
