--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -16,5 +16,11 @@
       </form>
     </div>
   </div>
+  <div class="card">
+    <div class="content">
+      <p style="font-size: 20px;">Advanced</p>
+      <a class="button" href="/applications/<%= dockerapp.Spec.Name %>/remove" style="padding-top:5px; padding-bottom:5px;">Delete App</a>
+    </div>
+  </div>
 </div>
 <% include ./blocks/footer %>
