--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -15,13 +15,10 @@
   </div>
   <div class="card">
     <div class="content">
+      <p style="font-size: 20px;">Environment</p>
+      <p style="font-size: 18px;">Format on JSON!</p>
       <form action="/applications" method="post">
-        <p style="font-size: 20px;">Environment</p>
-        <hr>
-        <p style="font-size: 18px;">Git</p>
-        <input type="text" name="giturl" value="<% if(mongoapp.deployment.giturl == 'ns'){ } else { return mongoapp.deployment.giturl } %>" placeholder="Git Url">
-        <input type="text" name="gitusername" value="" placeholder="Git Username">
-        <input type="text" name="gitpassword" value="" placeholder="Git Password">
+        <textarea style="height: 30px; width: 200px;" name="comment" ></textarea>>
       </form>
     </div>
   </div>
@@ -32,4 +29,5 @@
     </div>
   </div>
 </div>
+
 <% include ./blocks/footer %>
