--- a/dashboard/ejs/manage.ejs
+++ b/dashboard/ejs/manage.ejs
@@ -18,7 +18,7 @@
       <p style="font-size: 20px;">Environment</p>
       <p style="font-size: 18px;">Format on JSON!</p>
       <form action="/applications" method="post">
-        <textarea style="height: 150px; width: 200px; background-color#03143E; color: white;" name="comment" ></textarea>
+        <textarea name="env" ></textarea>
       </form>
     </div>
   </div>
