--- a/dashboard/public/styles.css
+++ b/dashboard/public/styles.css
@@ -56,7 +56,7 @@ textarea {
   padding-left: 10px;
   padding-right: 10px;
   margin-bottom: 20px;
-  height: 150;
+  height: 150px;
   width: 200px;
   font-size: 15px;
 }
